# ev_chargepoint_prediction

./: .gitignore  Makefile  Pipfile  README.md  analysis.md  app.ipynb  app.py  business_problem.md  data.md  eda.md  eda1.md  eda2.md  initialize.sh  main_app.py  modelling.md  pyproject.toml  requirements-dev.txt  requirements.txt  search.geojson  search.html  setup.py  test_app.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: ada_boost_model  decision_tree_model  gaussian_naivebayes_model  gradient_boost_model  linear_svm_model  logistic_regression_model  neural_network_model
notebooks/: 0.0-ced-data-dictionary.ipynb  1.0-ced-chargepoint-analysis.ipynb  1.0-ced-chargepoint-categorisation.ipynb  2.0-ced-exploratory-data-analysis.ipynb  3.0-ced-modelling.ipynb  4.0-ced-analysis.ipynb  categorize.csv  data_descriptions.xlsx  preprocessing_functions.ipynb  search.geojson  search.html  z_eda_car_reg.ipynb  z_eda_electricity.ipynb  z_eda_geo_spatial.ipynb  z_eda_population_income.ipynb  z_eda_socio_econ.ipynb  z_eda_transportation.ipynb
presentation-readme/: analysis.md  business_problem.md  data.md  data_dictionary.md  eda1.md  eda2.md  modelling.md
references/tableau_uk_maps/: EnglandCCGs.tds  EnglandLEPs.tds  GBCeremonialCounties.tds  GBMiddleSuperOutputAreas.tds  GBParliamentaryConstituencies.tds  GBPostcodeDistricts.tds  GBPostcodeSectors.tds  NHSEnglandAreaTeams.tds  UKLocalAuthorityDistricts.tds  UKLowerSuperOutputAreas.tds  UKPostcodeAreas.tds
src/data/: 1-data-clean-imd.py  10-data-extract-chargers.py  11-data-merge-full-msoa.py  data_dictionary.py  (+11 more)
(+5 files in other folders)
